--- a/README.rdoc
+++ b/README.rdoc
@@ -5,37 +5,37 @@ What's the difference between flags, preferences and options?  Nothing really, t
 ==Installation
 In your Gemfile:
 
- gem "has_easy"
+ gem "model_settings"
 
 At the command prompt:
- rails g has_easy_migration
+ rails g model_settings_migration
  rake db:migrate
- 
+
 ==Example
 
  class User < ActiveRecord::Base
-   has_easy :preferences do |p|
+   model_settings :preferences do |p|
      p.define :color
      p.define :theme
    end
-   has_easy :flags do |f|
+   model_settings :flags do |f|
      f.define :is_admin
      f.define :is_spammer
    end
  end
 
  user = User.new
- 
+
  # hash like access
  user.preferences[:color] = 'red'
  user.preferences[:color] # => 'red'
- 
+
  # object like access
  user.preferences.theme? # => false, shorthand for !!user.preferences.theme
  user.preferences.theme = "savage thunder"
  user.preferences.theme # => "savage thunder"
  user.preferences.theme? # => true
- 
+
  # easy access for form inputs
  user.flags_is_admin? # => false, shorthand for !!user.flags_is_admin
  user.flags_is_admin = true
@@ -45,13 +45,13 @@ At the command prompt:
  # save user's preferences
  user.preferences.save # will trickle down validation errors to user
  user.errors.empty? # hopefully true
- 
+
  # save user's flags
  user.flags.save! # will raise exception on validation errors
 
 
 ==Advanced Usage
-There are a lot of options that you can use with has_easy:
+There are a lot of options that you can use with model_settings:
 * aliasing
 * default values
 * inheriting default values from parent associations
@@ -62,12 +62,12 @@ There are a lot of options that you can use with has_easy:
 In this section, we'll go over how to use each option and explain why it's useful.
 
 ===:alias and :aliases
-These options go on the has_easy method call and specify alternate ways of invoking the association.
+These options go on the model_settings method call and specify alternate ways of invoking the association.
   class User < ActiveRecord::Base
-    has_easy :preferences, :aliases => [:prefs, :options] do |p|
+    model_settings :preferences, :aliases => [:prefs, :options] do |p|
       p.define :likes_cheese
     end
-    has_easy :flags, :alias => :status do |p|
+    model_settings :flags, :alias => :status do |p|
       p.define :is_admin
     end
   end
@@ -82,48 +82,48 @@ These options go on the has_easy method call and specify alternate ways of invok
 ===:default
 Very simple.  It does what you think it does.
  class User < ActiveRecord::Base
-   has_easy :options do |p|
+   model_settings :options do |p|
      p.define :gender, :default => 'female'
    end
  end
- 
+
  User.new.options.gender # => 'female'
 
 ===:default_through
 Allows the model to inherit it's default value from an association.
  class Client < ActiveRecord::Base
    has_many :users
-   has_easy :options do |p|
+   model_settings :options do |p|
      p.define :gender, :default => 'male'
    end
  end
  class User < ActiveRecord::Base
    belongs_to :client
-   has_easy :options do |p|
+   model_settings :options do |p|
      p.define :gender, :default_through => :client, :default => 'female'
    end
  end
- 
+
  client = Client.create
  user = client.users.create
  user.options.gender # => 'male'
- 
+
  client.options.gender = 'asexual'
  client.options.save
  user.client(true) # reload association
  user.options.gender # => 'asexual'
- 
+
  User.new.options.gender => 'female'
- 
+
 
 ===:default_dynamic
 Allows for calculated default values.
   class User < ActiveRecord::Base
-    has_easy 'prefs' do |t|
+    model_settings 'prefs' do |t|
       t.define :likes_cheese, :default_dynamic => :defaults_to_like_cheese
       t.define :is_dumb, :default_dynamic => Proc.new{ |user| user.dumb_post_count > 10 }
     end
-  
+
     def defaults_to_like_cheese
       cheesy_post_count > 10
     end
@@ -131,13 +131,13 @@ Allows for calculated default values.
 
   user = User.new :cheesy_post_count => 5
   user.prefs.likes_cheese? => false
-  
+
   user = User.new :cheesy_post_count => 11
   user.prefs.likes_cheese? => true
-  
+
   user = User.new :dumb_post_count => 5
   user.prefs.is_dumb? => false
-  
+
   user = User.new :dumb_post_count => 11
   user.prefs.is_dumb? => true
 
@@ -145,7 +145,7 @@ Allows for calculated default values.
 ===:type_check
 Allows type checking of values (for people who are into that).
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :theme, :type_check => String
       p.define :dollars, :type_check => [Fixnum, Bignum]
     end
@@ -153,21 +153,21 @@ Allows type checking of values (for people who are into that).
 
   user.prefs.theme = 123
   user.prefs.save! # ActiveRecord::InvalidRecord exception raised with message like:
-                   # 'theme' for has_easy('prefs') failed type check
+                   # 'theme' for model_settings('prefs') failed type check
 
   user.prefs.dollars = "hello world"
   user.prefs.save
   user.errors.empty? # => false
-  user.errors.on(:prefs) # => 'dollars' for has_easy('prefs') failed type check
+  user.errors.on(:prefs) # => 'dollars' for model_settings('prefs') failed type check
 
 
 ===:validate
 Make sure that values fit some kind of criteria.  If you use a Proc or name a method with a Symbol to do validation, there are three ways to specify failure:
 1. return false
-2. raise a HasEasy::ValidationError
+2. raise a ModelSettings::ValidationError
 3. return an array of custom validation error messages
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :foreground, :validate => ['red', 'blue', 'green']
       p.define :background, :validate => Proc.new{ |value| %w[black white grey].include?(value) }
       p.define :midground,  :validate => :midground_validator
@@ -179,13 +179,13 @@ Make sure that values fit some kind of criteria.  If you use a Proc or name a me
 
   user.prefs.foreground = 'yellow'
   user.prefs.save! # ActiveRecord::InvalidRecord exception raised with message like:
-                   # 'theme' for has_easy('prefs') failed validation
+                   # 'theme' for model_settings('prefs') failed validation
 
   user.prefs.background = "pink"
   user.prefs.save
   user.errors.empty? => false
-  user.errors.on(:prefs) => 'background' for has_easy('prefs') failed validation
-  
+  user.errors.on(:prefs) => 'background' for model_settings('prefs') failed validation
+
   user.prefs.midground = "black"
   user.prefs.save
   user.errors.on(:prefs)[0] => "msg1"
@@ -195,7 +195,7 @@ Make sure that values fit some kind of criteria.  If you use a Proc or name a me
 ===:preprocess
 Alter the value before it goes through type checking and/or validation.  This is useful when working with forms and boolean values.  CAREFUL!!  This option only applies to the underscore accessors, i.e. <tt>prefs_likes_cheese=</tt>, not <tt>prefs.likes_cheese=</tt> or <tt>prefs[:likes_cheese]=</tt>.
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :likes_cheese, :validate => [true, false],
                               :preprocess => Proc.new{ |value| ['true', 'yes'].include?(value) ? true : false }
     end
@@ -205,7 +205,7 @@ Alter the value before it goes through type checking and/or validation.  This is
   user.prefs.likes_cheese
   => 'yes'
   user.prefs.save! # exception, validation failed
-  
+
   user.prefs_likes_cheese = 'yes' # :preprocess invoked
   user.prefs.likes_cheese
   => true
@@ -215,7 +215,7 @@ Alter the value before it goes through type checking and/or validation.  This is
 ===:postprocess
 Alter the value when it is read.  This is useful when working with forms and boolean values.  CAREFUL!!  This option only applies to the underscore accessors, i.e. <tt>prefs_likes_cheese</tt>, not <tt>prefs.likes_cheese</tt> or <tt>prefs[:likes_cheese]</tt>.
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :likes_cheese, :validate => [true, false],
                               :postprocess => Proc.new{ |value| value ? 'yes' : 'no' }
     end
@@ -228,33 +228,33 @@ Alter the value when it is read.  This is useful when working with forms and boo
   => 'yes'
 
 ==Using with Forms
-Suppose you have a <tt>has_easy</tt> field defined as a boolean and you want to use it with a checkbox in <tt>form_for</tt>.
+Suppose you have a <tt>model_settings</tt> field defined as a boolean and you want to use it with a checkbox in <tt>form_for</tt>.
 
   (model)
 
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :likes_cheese, :type_check => [TrueClass, FalseClass],
                               :preprocess => Proc.new{ |value| value == 'yes' },
                               :postprocess => Proc.new{ |value| value ? 'yes' : 'no' }
     end
   end
-  
+
   (view)
-  
+
   <% form_for(@user) do |f| %>
     <%= f.check_box 'user', 'prefs_likes_cheese', {}, 'yes', 'no' %> # invokes @user.prefs_likes_cheese which does the :postprocess
   <% end %>
-  
+
   (controller)
-  
+
   @user.update_attributes(params[:user]) # invokes @user.prefs_likes_cheese= which does the :preprocess
   @user.prefs.save
   @user.prefs.likes_cheese
   => true or false
   @user.prefs_likes_cheese # remember, only underscore accessors invoke the :preprocess and :postprocess options
   => 'yes' or 'no'
-  
+
 The general idea is that we make the form use <tt>prefs_likes_cheese=</tt> and <tt>prefs_likes_cheese</tt> accessors which in turn use the :preprocess and :postprocess options.  Then in our normal code, we use <tt>prefs.likes_cheese</tt> or <tt>prefs[:likes_cheese]</tt> accessors to get our expected boolean values.
 
 ==Missing Features
@@ -262,7 +262,7 @@ The general idea is that we make the form use <tt>prefs_likes_cheese=</tt> and <
 ===Autovivification
 For when we want to use fields without having to define them first.
   class User < ActiveRecord::Base
-    has_easy :prefs, :autovivify => true do |p|
+    model_settings :prefs, :autovivify => true do |p|
       p.define :likes_cheese, :default => 'yes'
     end
   end
@@ -276,26 +276,26 @@ For when we want to use fields without having to define them first.
 ===Scoping to other models
 Ehh, can't think of a way to describe this other than example.  Also, the syntax is completely up in the air, there are so many different ways to do it, I have no idea which way to go with.  Please tell me your ideas.
   class User < ActiveRecord::Base
-    has_easy :prefs do |p|
+    model_settings :prefs do |p|
       p.define :subscribed, :scoped => Post
       p.define :color, :scoped => [Car, Motorcycle] # polymorphic but must be Car or Motorcycle
       p.define :hair_color, :scoped => true # polymorphic no restrictions
       p.define :likes_cheese, :scoped => [Food, NilClass] # scoped and not scoped at the same time
     end
   end
-  
+
   post = Post.find :first, :conditions => {:topic => 'rails'}
   me.prefs.subscribed? :to => post
   => true
-  
+
   vette = Car.find :first, :conditions => {:model => 'corvette'}
   me.prefs.color :for => vette
   => 'black'
-  
+
   gf = Girl.find :first, :conditions => {:name => 'aimee'}
   me.prefs.hair_color :on => gf
   => 'brown'
-  
+
   watermelon = Food.find :first, :conditions => {:kind => 'watermelon'}
   my.prefs.likes_cheese? # not scoped; do I like cheese in general?
   => true
